--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,10 +2,10 @@
 <%- include("partials/header.ejs") %>
 
 <body>
-    <h1 class="login">Login</h1>
+    <h1 class="login">Register</h1>
     <!-- Log in form -->
     <div class="formsDiv">
-        <form action="/login" method="POST">
+        <form action="/register" method="POST">
             <!-- Get name -->
             <label for="name">name</label>
             <input type="name" id="username" name="username" required><br><br>
@@ -16,7 +16,7 @@
             <label for="user_id">User ID</label>
             <input type="text" id="user_id" name="user_id" required><br><br>
         <!-- Submit -->    
-        <input class="formSubmit" type="submit" value="Login">
+        <input class="formSubmit" type="submit" value="Register">
 
     </form>
     </div>
