--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <%- include("partials/header.ejs") %>
 
 <body>
-    <h1 class="login">Login</h1>
+    <h1>Login</h1>
     <!-- Log in form -->
     <div class="formsDiv">
         <form action="/login" method="POST">
@@ -18,5 +18,4 @@
     </form>
     </div>
 </body>
-</main>
 </html>
