--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,13 +2,13 @@
 <%- include("partials/header.ejs") %>
 
 <body>
-    <h1 class="login">Register</h1>
+    <h1>Register</h1>
     <!-- Log in form -->
     <div class="formsDiv">
         <form action="/register" method="POST">
             <!-- Get name -->
-            <label for="name">name</label>
-            <input type="name" id="username" name="username" required><br><br>
+            <label for="username">name</label>
+            <input type="text" id="username" name="username" required><br><br>
             <!-- Get password -->
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required><br><br>
@@ -21,5 +21,4 @@
     </form>
     </div>
 </body>
-</main>
 </html>
