--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,15 +2,19 @@
 <%- include("partials/header.ejs") %>
 
 <body>
-    <h1>Login</h1>
+    <h1 class="makeAPost">Login</h1>
     <!-- Log in form -->
     <div class="formsDiv">
+         <!-- If they triggered wrong password -->
+        <% if (error) { %>
+            <p><%= error %></p>
+        <% } %>
         <form action="/login" method="POST">
             <!-- Get user id -->
-            <label for="user_id">User ID</label>
+            <label for="user_id">User ID</label><br>
             <input type="text" id="user_id" name="user_id" required><br><br>
             <!-- Get password -->
-            <label for="password">Password</label>
+            <label for="password">Password</label><br>
             <input type="password" id="password" name="password" required><br><br>
         <!-- Submit -->    
         <input class="formSubmit" type="submit" value="Login">
@@ -18,4 +22,5 @@
     </form>
     </div>
 </body>
+</main>
 </html>
