--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,8 @@
     <!-- home and new post buttons -->
     <a href="/">Home</a>
     <a href="/form">New Post</a>
+    <a href="/register">Register</a>
+    <a href="/login">Login</a>
     <!-- if on the home page, put the tags dropdown in the banner -->
     <!-- the if statement checks whether a variable called currentPage was passed-->
     <% if (locals.currentPage) { %>
