took away name input on form

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -6,9 +6,9 @@
     <!-- Blog post form -->
     <div class="formsDiv">
     <form action="/submitPost" method="POST">
-        <!-- get name -->
+        <!-- get name 
         <label for="creatorName">Name:</label><br>
-        <input type="text" id="creatorName" name="creatorName" required><br><br>
+        <input type="text" id="creatorName" name="creatorName" required><br><br>-->
 
         <!-- get title -->
         <label for="blogTitle">Blog Title:</label><br>
