--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,9 +7,9 @@
     <div class="formsDiv">
     <form action="/edit-form/<%= locals.blogPost.id %>" method="POST">
 
-        <!-- get name -->
+        <!-- get name 
         <label for="creatorName">Name:</label><br>
-        <input type="text" id="creatorName" name="creatorName" value="<%=locals.blogPost.name%>" required><br><br>
+        <input type="text" id="creatorName" name="creatorName" value="<=locals.blogPost.name%>" required><br><br> -->
 
         <!-- get title -->
         <label for="blogTitle">Blog Title:</label><br>
