--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,9 +38,9 @@
 <h1>Build-a-Blog</h1>
 <div class="formsDiv">
     <form action="/submitPost" method="POST">
-        <!-- get name -->
+        <!-- get name 
         <label for="creatorName">Name:</label><br>
-        <input type="text" id="creatorName" name="creatorName" required><br><br>
+        <input type="text" id="creatorName" name="creatorName" required><br><br>-->
 
         <!-- get title -->
         <label for="blogTitle">Blog Title:</label><br>
